apps/wordle-duel-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordle-duel-service
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordle-duel-service
  template:
    metadata:
      labels:
        app: wordle-duel-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8088"
    spec:
      containers:
        - name: wordle-duel-service
          image: dariomr8/wordle-duel-service:0.30.1 # {"$imagepolicy": "flux-system:wordle-duel-service"}
          ports:
            - containerPort: 8088
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8088
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8088
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
