apps/wordle-duel-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordle-duel-service
  namespace: apps
spec:
  selector:
    app: wordle-duel-service
  ports:
    - port: 8088
      targetPort: 8088
